<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.views.AddCourseActivity">

    <!-- Fixed Action Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:gravity="center"
        android:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Course Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/courseNameInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:hint="@string/course_name_hint"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Course Dates -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/courseStartDateInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:hint="@string/date_placeholder"
                    android:inputType="date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/courseEndDateInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:hint="@string/date_placeholder"
                    android:inputType="date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Course Status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <Spinner
                    android:id="@+id/courseStatusSpinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Instructor Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/instructorNameInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:hint="@string/instructor_name_hint"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/instructorPhoneInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="phone"
                    android:hint="@string/instructor_phone_hint"
                    android:inputType="phone|number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="8dp" />
                <EditText
                    android:id="@+id/instructorEmailInput"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="emailAddress"
                    android:hint="@string/instructor_email_hint"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Assessments -->
            <TextView
                android:id="@+id/associatedAssessments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/associated_assessments"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/noAssessmentsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_assessments_yet"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/associatedAssessments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAssessments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item" />

            <!-- Notes -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_notes"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:paddingTop="8dp" />
            <EditText
                android:id="@+id/courseNotesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_notes_hint"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:gravity="top"
                android:padding="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:padding="8dp">
                <Button
                    android:id="@+id/courseSaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/save_button"
                    android:onClick="courseSaveButtonClicked"/>
                <Button
                    android:id="@+id/courseDiscardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discard_button"
                    android:onClick="courseDiscardButtonClicked"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
